prep for launch

--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,14 @@ layout: default
                 Let us be your partner in prosperity <br />
                 Register your workspace today
               </p>
-              <a class="arrow-link" href="">Register</a>
+              <a class="arrow-link" href="mailto:">Register</a>
             </div>
             <div class="cell large-6">
               <p>
                 <strong>Open Desk & Private Offices available</strong><br />
                 433 Central Ave Saint Petersburg, FL 33701
               </p>
-              <a class="arrow-link" href="">Find Us</a>
+              <a class="arrow-link" href="https://goo.gl/maps/uaPghk5qAGk" target="_blank">Find Us</a>
             </div>
           </section>
         </div>
