--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ layout: default
                 Let us be your partner in prosperity <br />
                 Register your workspace today
               </p>
-              <a class="arrow-link" href="mailto:">Register</a>
+              <a class="arrow-link" href="mailto:lfletcher@fletcherfischer.com">Register</a>
             </div>
             <div class="cell large-6">
               <p>
