--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ layout: default
                 Let us be your partner in prosperity <br />
                 Register your workspace today
               </p>
-              <a class="arrow-link" href="mailto:l%66le%74&#99;he%72@%66%6c%65tch%65r%66%69%73c&#104;e%72%2e%63o%6d">Register</a>
+              <a class="arrow-link" href="mailto:lfletcher@fletcherfischer.com">Register</a>
             </div>
             <div class="cell large-6">
               <p>
