--- a/src/index.html
+++ b/src/index.html
@@ -5,39 +5,42 @@ layout: default
   <div class="grid-container">
     <div class="grid-y medium-grid-frame align-center">
       <div class="cell shrink">
-        <div class="grid-x">
-          <div class="cell">
+        <div class="grid-x align-center">
+          <div class="cell small-11 medium-10 large-12">
             <header class="logo">
               <img src="{{ "assets/img/logo.svg" | relative_url }}" />
             </header>
           </div>
         </div>
-        <div class="content">
-          <section class="grid-x grid-margin-x align-justify align-bottom page-title">
-            <div class="cell large-6">
-              <h1>A Rising Tide Lifts All Boats.</h1>
-            </div>
-            <div class="cell large-6">
-              <h2>A Co-Work space for Innovators, Changemakers &amp; Entrepreneurs</h2>
-            </div>
-          </section>
-          <section class="grid-x grid-margin-x mobile-margins">
-            <div class="cell large-6">
-              <p>
-                Knowledge driven & Women owned. <br />
-                Let us be your partner in prosperity <br />
-                Register your workspace today
-              </p>
-              <a class="arrow-link" href="mailto:lfletcher@fletcherfischer.com">Register</a>
-            </div>
-            <div class="cell large-6">
-              <p>
-                <strong>Open Desk & Private Offices available</strong><br />
-                433 Central Ave Saint Petersburg, FL 33701
-              </p>
-              <a class="arrow-link" href="https://goo.gl/maps/uaPghk5qAGk" target="_blank">Find Us</a>
-            </div>
-          </section>
+        <div class="content grid-x align-center">
+          <div class="cell small-11 medium-10 large-12">
+            <section class="grid-x grid-margin-x align-justify align-bottom page-title">
+              <div class="cell large-6">
+                <h1>A Rising Tide Lifts All Boats.</h1>
+              </div>
+              <div class="cell large-6">
+                <h2>A Co-Work space for Innovators, Changemakers &amp; Entrepreneurs</h2>
+              </div>
+            </section>
+            <section class="grid-x grid-margin-x mobile-margins">
+              <div class="cell large-6">
+                <p>
+                  Knowledge driven & Women owned. <br />
+                  Let us be your partner in prosperity <br />
+                  Register your workspace today
+                </p>
+                <a class="arrow-link" href="mailto:lfletcher@fletcherfischer.com">Register</a>
+              </div>
+              <div class="cell large-6">
+                <p>
+                  <strong>Open Desk & Private Offices available</strong><br />
+                  433 Central Ave<br />
+                  Saint Petersburg, FL 33701
+                </p>
+                <a class="arrow-link" href="https://goo.gl/maps/uaPghk5qAGk" target="_blank">Find Us</a>
+              </div>
+            </section>
+          </div>
         </div>
       </div>
     </div>
