--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@ layout: default
     <div class="grid-y medium-grid-frame align-center">
       <div class="cell shrink">
         <div class="grid-x align-center">
-          <div class="cell small-11 medium-10 large-12">
+          <div class="cell small-11 xxlarge-12">
             <header class="logo">
               <img src="{{ "assets/img/logo.svg" | relative_url }}" />
             </header>
           </div>
         </div>
         <div class="content grid-x align-center">
-          <div class="cell small-11 medium-10 large-12">
+          <div class="cell small-11 xxlarge-12">
             <section class="grid-x grid-margin-x align-justify align-bottom page-title">
               <div class="cell large-6">
                 <h1>A Rising Tide Lifts All Boats.</h1>
