--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@ layout: default
               </div>
             </section>
             <section class="grid-x grid-margin-x mobile-margins">
-              <div class="cell large-6">
-                <p>
+              <div class="cell large-6" data-equalizer data-equalize-on="large">
+                <p data-equalizer-watch>
                   Knowledge driven & Women owned. <br />
                   Let us be your partner in prosperity <br />
                   Register your workspace today
@@ -32,10 +32,10 @@ layout: default
                 <a class="arrow-link" href="mailto:lfletcher@fletcherfischer.com">Register</a>
               </div>
               <div class="cell large-6">
-                <p>
+                <p data-equalizer-watch>
                   <strong>Open Desk & Private Offices available</strong><br />
-                  433 Central Ave<br />
-                  Saint Petersburg, FL 33701
+                  <a href="tel:7278778230">727-877-8230</a><br />
+                  433 Central Ave<br /> Saint Petersburg, FL 33701
                 </p>
                 <a class="arrow-link" href="https://goo.gl/maps/uaPghk5qAGk" target="_blank">Find Us</a>
               </div>
