--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@ layout: default
                 <h2>A Co-Work space for Innovators, Changemakers &amp; Entrepreneurs</h2>
               </div>
             </section>
-            <section class="grid-x grid-margin-x mobile-margins">
-              <div class="cell large-6" data-equalizer data-equalize-on="large">
+            <section class="grid-x grid-margin-x mobile-margins" data-equalizer data-equalize-on="large">
+              <div class="cell large-6">
                 <p data-equalizer-watch>
                   Knowledge driven & Women owned. <br />
                   Let us be your partner in prosperity <br />
